release-data/changelogs/9.0/plugins/dsc.adoc
= Changelogs for Rudder plugin dsc 9.0.\* versions

== dsc-9.0.9-2.12 (2026-08-06)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.8-2.12 (2026-07-12)

=== Changes


==== Rudder web app

* Delete webapp source in rudder-agent-windows repo
    (https://issues.rudder.io/issues/29016[#29016])

=== Bug fixes

==== Generic methods

* Fixed: Typo in the File-From-Template-Options method
    (https://issues.rudder.io/issues/29178[#29178])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.7-2.12 (2026-06-12)

=== Changes


==== Misc

* Remove the Rudder ivnentory hooks permissions checks before execution script
    (https://issues.rudder.io/issues/28902[#28902])

=== Bug fixes

==== Packaging

* Fixed: Build fails out of the CI
    (https://issues.rudder.io/issues/29035[#29035])
* Fixed: Remove the Test-WorldWritable.ps1 script
    (https://issues.rudder.io/issues/28975[#28975])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.6-2.12 (2026-05-04)

=== Changes


=== Bug fixes

==== Generic methods

* Fixed: Registry entry present method do not accept empty value
    (https://issues.rudder.io/issues/28726[#28726])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.5-2.12 (2026-04-02)

=== Changes


==== Generic methods

* Enable the showContent parameter
    (https://issues.rudder.io/issues/28382[#28382])

=== Bug fixes

==== Packaging

* Fixed: The rudderLibLoader.ps1 script is missing from the plugin
    (https://issues.rudder.io/issues/28540[#28540])
* Fixed: rudderLibLoader.ps1 should not be merged inside ncf.ps1
    (https://issues.rudder.io/issues/28516[#28516])

==== CLI

* Fixed: Typo in the update command
    (https://issues.rudder.io/issues/28615[#28615])
* Fixed: Rudder agent update does not fallback to initial policies if the policies are empty and the policy server is unreachable
    (https://issues.rudder.io/issues/28529[#28529])

==== System techniques

* Fixed: System techniques error messages are scary
    (https://issues.rudder.io/issues/28531[#28531])

==== Inventory

* Fixed: Agent fails to execute inventory hooks if they are editable by AD users in a subgroup of the local Administrator group
    (https://issues.rudder.io/issues/28473[#28473])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.4-2.12 (2026-02-16)

=== Changes


==== Miscellaneous

* Improve the documentation concerning the GM Windows component
    (https://issues.rudder.io/issues/28238[#28238])

=== Bug fixes

==== Generic methods

* Fixed: file_from_shared_folder method fails on windows agent > 9.0.2 when the policy server is still in 8.3
    (https://issues.rudder.io/issues/28333[#28333])
* Fixed: Rudder-PowershellExecution can fail silently if some internal variables are not correctly initialized
    (https://issues.rudder.io/issues/28219[#28219])
* Fixed: Method file_copy_from_Rudder_shared_folder not up to date for windows
    (https://issues.rudder.io/issues/28232[#28232])
* Fixed: Error with File Block Present
    (https://issues.rudder.io/issues/28115[#28115])

==== Techniques

* Fixed: Windows software has a bug with non existing elsif when using a powershell command to detect the software presence
    (https://issues.rudder.io/issues/28090[#28090])
* Fixed: Windows software directive documentation does not give the correct info on software detection
    (https://issues.rudder.io/issues/28073[#28073])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.4-2.11 (2026-02-16)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.3-2.11 (2025-12-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.2-2.11 (2025-12-10)

=== Changes


==== ci

* Port the Windows tests to GitHub actions
    (https://issues.rudder.io/issues/27986[#27986])

=== Bug fixes

==== CLI

* Fixed: Refactor some internal CLI functions
    (https://issues.rudder.io/issues/27657[#27657])

==== Generic methods

* Fixed: Directory-Absent throws an error if the 'recursive' field is empty
    (https://issues.rudder.io/issues/27948[#27948])

==== Agent library

* Fixed: Force the Library Satellite language to en
    (https://issues.rudder.io/issues/27898[#27898])

==== Techniques

* Fixed: error when using Windows Software technique in version 2.3 to upgrade Rudder
    (https://issues.rudder.io/issues/26817[#26817])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.1-2.11 (2025-11-27)

=== Changes


=== Bug fixes

==== Packaging

* Fixed: Add a preinst script to clean the /opt/rudder/share/plugins/dsc folder before install
    (https://issues.rudder.io/issues/27874[#27874])

==== Agent library

* Fixed: Rollback the FSharp.Core dependency from 9.0.101 to 4.7.2
    (https://issues.rudder.io/issues/27872[#27872])
* Fixed: Force the automatic binding redirect on the F# lib to avoid dependencies issues
    (https://issues.rudder.io/issues/27855[#27855])
* Fixed: Downgrade the minimal .NET version from 4.7.2 to 4.6.2
    (https://issues.rudder.io/issues/27844[#27844])
* Fixed: Add ID based resulting condition support to Windows and fix the noop resulting condition generation
    (https://issues.rudder.io/issues/27765[#27765])

==== Inventory

* Fixed: Agent fails to execute inventory hooks when the system language is not set to US
    (https://issues.rudder.io/issues/27837[#27837])

==== ci

* Fixed: Use the correct 8.3+ gpg key to verify sources for the test build
    (https://issues.rudder.io/issues/27839[#27839])
* Fixed: Update the test build to 8.3
    (https://issues.rudder.io/issues/27838[#27838])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.1-2.10 (2025-11-19)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.0-2.10 (2025-10-22)

=== Changes


==== Miscellaneous

* Add a validation when changing checks to enforce 
    (https://issues.rudder.io/issues/27262[#27262])

==== System techniques

* Prepare for cert auth mode
    (https://issues.rudder.io/issues/27490[#27490])

=== Bug fixes

==== Packaging

* Fixed: Backport 27164 to 8.2
    (https://issues.rudder.io/issues/27439[#27439])
* Fixed: Unnecessary rsync filter on the src folder copy
    (https://issues.rudder.io/issues/27518[#27518])

==== Rudder web app

* Fixed: Impact of new certificate variables on dsc tests
    (https://issues.rudder.io/issues/27331[#27331])

==== Generic methods

* Fixed: Empty show_content parameter lead to an error in method file from template with options
    (https://issues.rudder.io/issues/27650[#27650])
* Fixed: The new File-From-Template-Options method fails when the Engine parameter is left blank
    (https://issues.rudder.io/issues/27514[#27514])
* Fixed: Implement the file_from_template_options GM for windows
    (https://issues.rudder.io/issues/27095[#27095])

==== CLI

* Fixed: Typo in Rudder CLI breaking key pinning
    (https://issues.rudder.io/issues/27640[#27640])
* Fixed: Fix the rudder agent check-scheduled-tasks CLI
    (https://issues.rudder.io/issues/27432[#27432])
* Fixed: Remove the now obsolete function Invoke-RudderCurl from the RudderCli module
    (https://issues.rudder.io/issues/27447[#27447])

==== System techniques

* Fixed: Non forced encoding when writing the policy_server_ca file in the system techniques
    (https://issues.rudder.io/issues/27619[#27619])
* Fixed: Remove extra field in the Rudder-Agent scheduled task template source
    (https://issues.rudder.io/issues/27504[#27504])
* Fixed: Incorrect path for the scheduled task template path
    (https://issues.rudder.io/issues/27463[#27463])

==== Inventory

* Fixed: Can't do inventory on 9.0 agent on windows
    (https://issues.rudder.io/issues/27591[#27591])
* Fixed: Error at windows agent installation
    (https://issues.rudder.io/issues/26554[#26554])

==== System integration

* Fixed: Define the Get-SystemVersionInfo in the generated policy
    (https://issues.rudder.io/issues/27557[#27557])

==== Misc

* Fixed: Add a new powershell script to audit if a file can be edited by a non local admin account
    (https://issues.rudder.io/issues/27477[#27477])

==== Techniques

* Fixed: If a software have some corrupted data in the registry, we cannot check its version with software present method
    (https://issues.rudder.io/issues/27429[#27429])

==== ci

* Fixed: dotnet-fsharplint is no longer in use
    (https://issues.rudder.io/issues/27286[#27286])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.0-2.9 (2025-10-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.0.rc2-2.10 (2025-10-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.0.rc1-2.10 (2025-10-13)

=== Changes


==== System techniques

* Prepare for cert auth mode
    (https://issues.rudder.io/issues/27490[#27490])

=== Bug fixes

==== Generic methods

* Fixed: Empty show_content parameter lead to an error in method file from template with options
    (https://issues.rudder.io/issues/27650[#27650])

==== CLI

* Fixed: Typo in Rudder CLI breaking key pinning
    (https://issues.rudder.io/issues/27640[#27640])

==== System techniques

* Fixed: Non forced encoding when writing the policy_server_ca file in the system techniques
    (https://issues.rudder.io/issues/27619[#27619])

==== Inventory

* Fixed: Can't do inventory on 9.0 agent on windows
    (https://issues.rudder.io/issues/27591[#27591])

==== System integration

* Fixed: Define the Get-SystemVersionInfo in the generated policy
    (https://issues.rudder.io/issues/27557[#27557])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.0.beta2-2.10 (2025-10-07)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.0.beta1-2.10 (2025-09-09)

=== Changes


==== Miscellaneous

* Add a validation when changing checks to enforce 
    (https://issues.rudder.io/issues/27262[#27262])
* Adding the rust build for the module template 
    (https://issues.rudder.io/issues/26955[#26955])

==== Misc

* Update .NET dependencies
    (https://issues.rudder.io/issues/27130[#27130])

==== Generic methods

* Missing error details when command execution method fail on Windows
    (https://issues.rudder.io/issues/26242[#26242])

==== Techniques

* Warn when a system is too old to run the agent
    (https://issues.rudder.io/issues/26891[#26891])

==== Packaging

* Add agent version file
    (https://issues.rudder.io/issues/26838[#26838])

=== Bug fixes

==== Packaging

* Fixed: Backport 27164 to 8.2
    (https://issues.rudder.io/issues/27439[#27439])
* Fixed: Unnecessary rsync filter on the src folder copy
    (https://issues.rudder.io/issues/27518[#27518])
* Fixed: After a fresh install the postinst can fail to create the Rudder scheduled tasks
    (https://issues.rudder.io/issues/27237[#27237])

==== Generic methods

* Fixed: The new File-From-Template-Options method fails when the Engine parameter is left blank
    (https://issues.rudder.io/issues/27514[#27514])
* Fixed: Implement the file_from_template_options GM for windows
    (https://issues.rudder.io/issues/27095[#27095])
* Fixed: create an os query method on windows
    (https://issues.rudder.io/issues/26546[#26546])
* Fixed: Revert the variable control when using mustache templating
    (https://issues.rudder.io/issues/26846[#26846])
* Fixed: Translate the user in local group generic method documentation to YAML
    (https://issues.rudder.io/issues/26840[#26840])
* Fixed:  Fix the Service-Disabled method on Windows
    (https://issues.rudder.io/issues/26522[#26522])
* Fixed: The file_key_value_present_option method fails to edit files
    (https://issues.rudder.io/issues/26528[#26528])

==== Misc

* Fixed: Add a new powershell script to audit if a file can be edited by a non local admin account
    (https://issues.rudder.io/issues/27477[#27477])

==== System techniques

* Fixed: Remove extra field in the Rudder-Agent scheduled task template source
    (https://issues.rudder.io/issues/27504[#27504])
* Fixed: Incorrect path for the scheduled task template path
    (https://issues.rudder.io/issues/27463[#27463])
* Fixed: Error message when no policies are applied to a node
    (https://issues.rudder.io/issues/27212[#27212])
* Fixed: Scheduled rudder agent run can be skipped by the task scheduler
    (https://issues.rudder.io/issues/26591[#26591])

==== Inventory

* Fixed: Error at windows agent installation
    (https://issues.rudder.io/issues/26554[#26554])

==== Techniques

* Fixed: If a software have some corrupted data in the registry, we cannot check its version with software present method
    (https://issues.rudder.io/issues/27429[#27429])

==== CLI

* Fixed: Fix the rudder agent check-scheduled-tasks CLI
    (https://issues.rudder.io/issues/27432[#27432])
* Fixed: Remove the now obsolete function Invoke-RudderCurl from the RudderCli module
    (https://issues.rudder.io/issues/27447[#27447])
* Fixed: Error in the first agent run after a fresh install
    (https://issues.rudder.io/issues/27171[#27171])
* Fixed: Policy server file hostname read from the policy-server.conf file should be trimmed
    (https://issues.rudder.io/issues/25561[#25561])
* Fixed: Windows server 2016 define the windows_2016 condition instead of windows_server_2016
    (https://issues.rudder.io/issues/26662[#26662])
* Fixed: Remove rudderCli unapproved verbs warning
    (https://issues.rudder.io/issues/26550[#26550])

==== ci

* Fixed: dotnet-fsharplint is no longer in use
    (https://issues.rudder.io/issues/27286[#27286])
* Fixed: Build test is missing the cargo binaries in its path
    (https://issues.rudder.io/issues/27136[#27136])
* Fixed: Fix typo in Jenkinsfile
    (https://issues.rudder.io/issues/27135[#27135])
* Fixed: Pass the build on Ubuntu Noble to easily bump gcc version
    (https://issues.rudder.io/issues/27120[#27120])

==== Agent library

* Fixed: Re-canonify the expression before evualting them
    (https://issues.rudder.io/issues/26537[#26537])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== dsc-9.0.0.alpha1-2.9 (2025-07-24)

=== Changes


=== Bug fixes

==== Rudder web app

* Fixed: Impact of new certificate variables on dsc tests
    (https://issues.rudder.io/issues/27331[#27331])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

